data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1076.wast
;; 7. **`br_table` with Dynamically Calculated Index**:    - **Description**: Implement a `br_table` with an index calculated dynamically at runtime, within a loop.    - **Constraint**: Tests the runtime handling and correct calculation of indices, verifying dynamic branch resolution inside loops.

(assert_invalid
  (module (func $br_table-dynamic-index-in-loop
    (i32.const 0) (i32.const 1) (i32.add)
    (loop (result i32)
      (local.get 0)
      (br_table 0 0)
    )
  ))
  "undeclared label"
)